--- a/core/ui/src/styles/_ns8.scss
+++ b/core/ui/src/styles/_ns8.scss
@@ -418,8 +418,8 @@ a.bx--side-nav__link--current .bx--side-nav__link-text {
 // styles for large devices
 @media (min-width: $breakpoint-large) {
   // limit form fields width on large devices
-  .bx--text-input,
-  .bx--text-input__field-wrapper {
+  .cv-text-input,
+  .cv-multi-select {
     max-width: $breakpoint-medium;
   }
 }
